k8s/auth-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: brinq-auth-server
  name: brinq-auth-server
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: brinq-auth-server
